bug is fixed in the about section

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
           <nav>
             <ul>
-              <li><a href="./index.html">Home</a></li>
-              <li><a href="./src/html/about.html">About</a></li>
-              <li><a href="./src/html/contact.html">Contact</a></li>
+              <a href="./index.html"><li>Home</li></a>
+              <a href="./src/html/about.html"> <li>About</li></a>
+              <a href="./src/html/contact.html"><li>Contact</li></a>
             </ul>
           </nav>
         </div>
@@ -171,13 +171,15 @@
         <div class="about">
           <h1>About</h1>
           <div class="imageAndTextContainer">
-            <img
-              class="float-img"
-              width="100"
-              height="100"
-              src="./src/images/image2.jpg"
-              alt="image 2"
-            />
+            <div class="aboutImageContainer">
+              <img
+                class="float-img"
+                width="100"
+                height="100"
+                src="./src/images/image2.jpg"
+                alt="image 2"
+              />
+            </div>
 
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
