--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -19,9 +19,9 @@
 
           <nav>
             <ul>
-              <li><a href="../../index.html">Home</a></li>
-              <li><a href="./about.html">About</a></li>
-              <li><a href="./contact.html">Contact</a></li>
+              <a href="./index.html"><li>Home</li></a>
+              <a href="./src/html/about.html"> <li>About</li></a>
+              <a href="./src/html/contact.html"><li>Contact</li></a>
             </ul>
           </nav>
         </div>
@@ -62,7 +62,7 @@
               ></textarea>
             </div>
             <div class="submitbtn">
-              <button   type="submit">Submit</button>
+              <button type="submit">Submit</button>
             </div>
           </form>
         </div>
@@ -122,13 +122,15 @@
         <div class="about">
           <h1>About</h1>
           <div class="imageAndTextContainer">
-            <img
-              class="float-img"
-              width="100"
-              height="100"
-              src="../images/image2.jpg"
-              alt="image 2"
-            />
+            <div class="aboutImageContainer">
+              <img
+                class="float-img"
+                width="100"
+                height="100"
+                src="../images/image2.jpg"
+                alt="image 2"
+              />
+            </div>
 
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
