semantic form is added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="./src/css/styles.css" />
   </head>
   <body>
@@ -18,16 +18,17 @@
 
           <nav>
             <ul>
-              <a href="./index.html"><li>Home</li></a>
-              <a href="./src/html/about.html"> <li>About</li></a>
-              <a href="./src/html/contact.html"><li>Contact</li></a>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./src/html/about.html">About</a></li>
+              <li><a href="./src/html/contact.html">Contact</a></li>
             </ul>
           </nav>
         </div>
       </div>
     </header>
-    <section class="mainContainer">
-      <main>
+
+    <main>
+      <section class="mainContainer">
         <div class="template">
           <h2>Template license</h2>
           <h3>lorem Ipsum dolor</h3>
@@ -115,7 +116,7 @@
             <a href="">Comments(24)</a> March 16, 2015
           </p>
         </div>
-      </main>
+      </section>
       <aside>
         <h2>Siderbar Menu</h2>
         <nav>
@@ -141,7 +142,7 @@
           </li>
         </ul>
       </aside>
-    </section>
+    </main>
     <footer>
       <div class="footerContainer">
         <div class="gallery">
@@ -211,15 +212,15 @@
         <div>
           <div class="left">
             <p>
-              &copy; copyright mywebsite. designed by blue
-              <a href="">website template</a>
+              &copy; copyright mywebsite. designed by Jiren
+              <a href="">Software Engineer</a>
             </p>
           </div>
           <nav class="right">
             <ul>
-              <li><a href="https://google.com">Home</a></li>
-              <li><a href="https://google.com">About</a></li>
-              <li><a href="https://google.com">Contact</a></li>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./src/html/about.html">About</a></li>
+              <li><a href="./src/html/contact.html">Contact</a></li>
             </ul>
           </nav>
         </div>
