--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/contact.css" />
   </head>
@@ -19,80 +19,82 @@
 
           <nav>
             <ul>
-              <a href="./index.html"><li>Home</li></a>
-              <a href="./src/html/about.html"> <li>About</li></a>
-              <a href="./src/html/contact.html"><li>Contact</li></a>
+              <li><a href="../../index.html">Home</a></li>
+              <li><a href="./about.html">About</a></li>
+              <li><a href="./contact.html">Contact</a></li>
             </ul>
           </nav>
         </div>
       </div>
     </header>
-    <section class="mainContainer">
-      <main>
-        <div class="contactInformation">
-          <h2>Contact Us</h2>
-          <p>
-            You can find us Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Maxime voluptate rem veritatis dolorem placeat sit dicta
-            magnam exercitationem praesentium vitae sunt nemo.
-          </p>
-        </div>
-        <div class="form">
-          <h2>Send Us Email</h2>
-          <form action="/submit_form" method="post">
-            <div>
-              <label for="name">Name (required):</label><br />
-              <input type="text" id="name" name="name" required />
-            </div>
-            <div>
-              <label for="email">Email (required):</label><br />
-              <input type="email" id="email" name="email" required />
-            </div>
-            <div>
-              <label for="website">Website:</label><br />
-              <input type="url" id="website" name="website" />
-            </div>
-            <div>
-              <label for="message">Your Message:</label><br />
-              <textarea
-                id="message"
-                name="message"
-                rows="4"
-                cols="50"
-              ></textarea>
-            </div>
-            <div class="submitbtn">
-              <button type="submit">Submit</button>
-            </div>
-          </form>
-        </div>
-      </main>
-      <aside>
-        <h2>Siderbar Menu</h2>
-        <nav>
+    <main class="mainContainer">
+      <div class="innerContainer">
+        <section>
+          <div class="contactInformation">
+            <h2>Contact Us</h2>
+            <p>
+              You can find us Lorem ipsum dolor sit amet consectetur adipisicing
+              elit. Maxime voluptate rem veritatis dolorem placeat sit dicta
+              magnam exercitationem praesentium vitae sunt nemo.
+            </p>
+          </div>
+          <div class="form">
+            <h2>Send Us Email</h2>
+            <form action="/submit_form" method="post">
+              <div>
+                <label for="name">Name (required):</label><br />
+                <input type="text" id="name" name="name" required />
+              </div>
+              <div>
+                <label for="email">Email (required):</label><br />
+                <input type="email" id="email" name="email" required />
+              </div>
+              <div>
+                <label for="website">Website:</label><br />
+                <input type="url" id="website" name="website" />
+              </div>
+              <div>
+                <label for="message">Your Message:</label><br />
+                <textarea
+                  id="message"
+                  name="message"
+                  rows="4"
+                  cols="50"
+                ></textarea>
+              </div>
+              <div class="submitbtn">
+                <button type="submit">Submit</button>
+              </div>
+            </form>
+          </div>
+        </section>
+        <aside>
+          <h2>Siderbar Menu</h2>
+          <nav>
+            <ul>
+              <li>Home</li>
+              <li>About Us</li>
+              <li>Contact Us</li>
+            </ul>
+          </nav>
+          <h2 class="Sponsors">Sponsors</h2>
           <ul>
-            <li>Home</li>
-            <li>About Us</li>
-            <li>Contact Us</li>
+            <li>
+              <h4>Lorem</h4>
+              <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </li>
+            <li>
+              <h4>Lorem</h4>
+              <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </li>
+            <li>
+              <h4>Lorem</h4>
+              <p>Lorem ipsum dolor sit amet consectetur.</p>
+            </li>
           </ul>
-        </nav>
-        <h2 class="Sponsors">Sponsors</h2>
-        <ul>
-          <li>
-            <h4>Lorem</h4>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-          </li>
-          <li>
-            <h4>Lorem</h4>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-          </li>
-          <li>
-            <h4>Lorem</h4>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-          </li>
-        </ul>
-      </aside>
-    </section>
+        </aside>
+      </div>
+    </main>
     <footer>
       <div class="footerContainer">
         <div class="gallery">
@@ -162,15 +164,15 @@
         <div>
           <div class="left">
             <p>
-              &copy; copyright mywebsite. designed by blue
-              <a href="">website template</a>
+              &copy; copyright mywebsite. designed by Jiren
+              <a href="">Software Engineer</a>
             </p>
           </div>
           <nav class="right">
             <ul>
-              <li><a href="https://google.com">Home</a></li>
-              <li><a href="https://google.com">About</a></li>
-              <li><a href="https://google.com">Contact</a></li>
+              <li><a href="../../index.html">Home</a></li>
+              <li><a href="./about.html">About</a></li>
+              <li><a href="./contact.html">Contact</a></li>
             </ul>
           </nav>
         </div>
