wrong layout is added

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -199,5 +199,10 @@
         </div>
       </div>
     </footer>
+    <div class="wrongLayout">
+      <a href="https://assesment2-ugr-5902-15-section4.netlify.app/"
+        >Wrong <br />layout?</a
+      >
+    </div>
   </body>
 </html>
