wrong layout removed

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=.8" />
     <title>Home</title>
     <link rel="stylesheet" href="./src/css/styles.css" />
   </head>
@@ -19,8 +19,8 @@
           <nav>
             <ul>
               <li><a href="./index.html">Home</a></li>
-              <li><a href="./src/html/about.html">About</a></li>
-              <li><a href="./src/html/contact.html">Contact</a></li>
+              <li><a href="./src/html/about.html">About Us</a></li>
+              <li><a href="./src/html/contact.html">Contact Us</a></li>
             </ul>
           </nav>
         </div>
@@ -38,12 +38,14 @@
             </div>
           </div>
           <p>
-            This is a free CSS website template by
+            This is a free CSS website template by Lorem ipsum dolor sit.
             <a href="">BReyeltmptaten.com</a> Thus work is distnbuted under the
-            Ceitu <a href="">Commons Attnbution.2.0.Liserat</a> which means that
-            you are free to use i for any personal or commercial purpose
-            praviied you credif me in fhe fam of a tnk back to
-            <a href="">BReyeltmptaten.com</a><br /><br />
+            Ceitu Lorem ipsum dolor sit amet. lorem<a href=""
+              >Commons Attnbution.2.0.Liserat</a
+            >
+            which means that you are free to use i for any personal or
+            commercial purpose praviied you credif me in fhe fam of a tnk back
+            to <a href="">BReyeltmptaten.com</a><br /><br />
             <a href="" class="readMore">Read More</a> |
             <a href="">Comments(24)</a> March 16, 2015
           </p>
@@ -58,7 +60,9 @@
           </div>
           <p>
             This is a free CSS website template by Thus work is distnbuted under
-            the Ceitu <a href="">Commons Attnbution.2.0.Liserat</a>
+            the Ceitu Lorem ipsum dolor sit amet consectetur.<a href=""
+              >Commons Attnbution.2.0.Liserat</a
+            >
             <a href="">BReyeltmptaten.com which means</a> that you are free to
             use i for any personal or commercial purpose praviied you credif me
             any personal or commercial purpose praviied you in fhe fam of a tnk
@@ -121,9 +125,9 @@
         <h2>Siderbar Menu</h2>
         <nav>
           <ul>
-            <li>Home</li>
-            <li>About Us</li>
-            <li>Contact Us</li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./src/html/about.html">About Us</a></li>
+            <li><a href="./src/html/contact.html">Contact Us</a></li>
           </ul>
         </nav>
         <h2 class="Sponsors">Sponsors</h2>
@@ -187,9 +191,11 @@
               repellendus fuga dolor ex cumque unde laborum voluptates
               aspernatur neque, maiores ullam! Eligendi quibusdam cupiditate
               minus. Eligendi earum cum voluptate Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. <br />Obcaecati assumenda saepe
-              corporis vero magnam, quia et eos officiis officia eaque vel ab
-              dolor dicta dolores rerum molestiae sapiente numquam? Eveniet!
+              consectetur, adipisicing elit. >Obcaecati assumenda saepe corporis
+              vero magnam, quia et eos officiis officia eaque vel ab dolor dicta
+              dolores rerum molestiae sapiente numquam? Eveniet!<br />
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+              neque et eos excepturi ea quidem.
               <br />
               <a href="learnMore">Learn More ...</a>
             </p>
@@ -219,17 +225,12 @@
           <nav class="right">
             <ul>
               <li><a href="./index.html">Home</a></li>
-              <li><a href="./src/html/about.html">About</a></li>
-              <li><a href="./src/html/contact.html">Contact</a></li>
+              <li><a href="./src/html/about.html">About Us</a></li>
+              <li><a href="./src/html/contact.html">Contact Us</a></li>
             </ul>
           </nav>
         </div>
       </div>
     </footer>
-    <div class="wrongLayout">
-      <a href="https://assesment2-ugr-5902-15-section4.netlify.app/"
-        >Wrong <br />layout?</a
-      >
-    </div>
   </body>
 </html>
