--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -20,8 +20,8 @@
           <nav>
             <ul>
               <li><a href="../../index.html">Home</a></li>
-              <li><a href="./about.html">About</a></li>
-              <li><a href="./contact.html">Contact</a></li>
+              <li><a href="./about.html">About Us</a></li>
+              <li><a href="./contact.html">Contact Us</a></li>
             </ul>
           </nav>
         </div>
@@ -178,10 +178,5 @@
         </div>
       </div>
     </footer>
-    <div class="wrongLayout">
-      <a href="https://assesment2-ugr-5902-15-section4.netlify.app/"
-        >Wrong <br />layout?</a
-      >
-    </div>
   </body>
 </html>
