side nav bar edited

--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@
               repellendus fuga dolor ex cumque unde laborum voluptates
               aspernatur neque, maiores ullam! Eligendi quibusdam cupiditate
               minus. Eligendi earum cum voluptate Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. >Obcaecati assumenda saepe corporis
+              consectetur, adipisicing elit. Obcaecati assumenda saepe corporis
               vero magnam, quia et eos officiis officia eaque vel ab dolor dicta
-              dolores rerum molestiae sapiente numquam? Eveniet!<br />
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              neque et eos excepturi ea quidem.
+              dolores rerum molestiae sapiente numquam? Eveniet!veritatis Lorem
+              ipsum dolor sit amet consectetur adipisicing elit. Labore neque et
+              eos excepturi ea quidem.
               <br />
               <a href="learnMore">Learn More ...</a>
             </p>
