--- a/src/html/about.html
+++ b/src/html/about.html
@@ -92,9 +92,9 @@
           <h2>Siderbar Menu</h2>
           <nav>
             <ul>
-              <li>Home</li>
-              <li>About Us</li>
-              <li>Contact Us</li>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./src/html/about.html">About Us</a></li>
+              <li><a href="./src/html/contact.html">Contact Us</a></li>
             </ul>
           </nav>
           <h2 class="Sponsors">Sponsors</h2>
@@ -159,8 +159,8 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
               repellendus fuga dolor ex cumque unde laborum voluptates
               aspernatur neque, maiores ullam! Eligendi quibusdam cupiditate
-              minus. Eligendi earum cum voluptate Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. <br />Obcaecati assumenda saepe
+              minus. Eligendi earum cum voluptate Lorem ipsum dolor sit amet <br
+              / >consectetur, adipisicing elit.Obcaecati assumenda saepe
               corporis vero magnam, quia et eos officiis officia eaque vel ab
               dolor dicta dolores rerum molestiae sapiente numquam? Eveniet!
               <br />
