--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <div class="textContainer">
           <div class="slogan">
-            <p>put your slogan here</p>
+            <p>I like Penguins</p>
           </div>
 
           <h1 class="box"><span>Business</span> Box</h1>
