--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
     <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../css/contact.css" />
+    <link rel="stylesheet" href="../css/layout.css" />
   </head>
   <body>
     <header>
       <div class="container">
         <div class="textContainer">
           <div class="slogan">
-            <p>put your slogan here</p>
+            <p>I like Penguins</p>
           </div>
 
           <h1 class="box"><span>Business</span> Box</h1>
@@ -27,8 +27,8 @@
         </div>
       </div>
     </header>
-    <main class="mainContainer">
-      <div class="innerContainer">
+    <main class="mainContainer contactMain">
+      <div class="innerContainer contactInnerContainer">
         <section>
           <div class="contactInformation">
             <h2>Contact Us</h2>
